--- a/index.html
+++ b/index.html
@@ -17,7 +17,48 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="header-top">
+            <div class="inner">
+                <div class="top-banner">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="">쿠첸몰 3월 신규 회원 혜택</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">우리집에 안성맞춘! (春)</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">설레는 봄 특가 121플러스 기획전</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">3월에도 연아의 픽! brain 밥솥 드려봄</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">THE Fit하고 THE Slim하게! 더 핏 슬림 론칭 기획전</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">쿠첸몰 3월 신규 회원 혜택</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="">우리집에 안성맞춘! (春)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="util">
+                    <a href="">로그인</a>
+                    <a href="">회원가입 <span class="pop">지금 가입하시면 15% 추가 쿠폰</span></a>
+                    <a href="">고객센터</a>
+                </div>
+            </div>
+        </div>
+        <div class="gnb">
+            <h1 class="logo"><a href=""></a></h1>
+            <ul></ul>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
