--- a/index.html
+++ b/index.html
@@ -47,17 +47,82 @@
                 </div>
                 <div class="util">
                     <a href="">로그인</a>
-                    <a href="">회원가입 <span class="pop">지금 가입하시면 15% 추가 쿠폰</span></a>
+                    <a href="" class="join">회원가입 <span class="pop">지금 가입하시면 15% 추가 쿠폰</span></a>
                     <a href="">고객센터</a>
                 </div>
             </div>
         </div>
-        <div class="gnb">
-            <h1 class="logo"><a href=""></a></h1>
-            <ul></ul>
+        <div class="gnb inner">
+            <button class="nav-btn">
+                <span class="line01"></span>
+                <span class="line02"></span>
+                <span class="line03"></span>
+            </button>
+            <h1 class="logo"><a href=""><img src="/assets/images/logo.png" alt=""></a></h1>
+            <ul class="menu">
+                <li>
+                    <a href="">포토 리뷰</a>
+                </li>
+                <li>
+                    <a href="">기획전</a>
+                </li>
+                <li>
+                    <a href="">이벤트</a>
+                </li>
+                <li>
+                    <a href="">쿠첸</a>
+                </li>
+                <li>
+                    <a href="">멤버십 혜택</a>
+                </li>
+                <li>
+                    <a href="">신제품</a>
+                </li>
+                <li>
+                    <a href="">밥솥</a>
+                </li>
+                <li>
+                    <a href="">전기레인지</a>
+                </li>
+                <li>
+                    <a href="">주방/생활가전</a>
+                </li>
+                <li>
+                    <a href="">소모품/기타</a>
+                </li>
+            </ul>
+            <div class="shop-group">
+                <button class="search"></button>
+                <a href="" class="cart"></a>
+                <a href="" class="user"></a>
+            </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="mainSwiper">
+
+
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="/assets/images/5e75bb6f1500ab1f9cc87d8285afab89.jpeg" alt="">
+                    <div class="slide-txt">
+                        설레는 봄 특가 기획전💐
+                        베스트셀러 121+ 밥솥 SALE🧡
+                        121℃로 더 맛있게, 2.1 기압으로 더 완벽하게!
+                        기획전 전용 할인쿠폰 + 구매 전원 잡곡 사은품 증정!🎁
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <img src="/assets/images/63ee55c0769e7b0992060d8ebe0464a8.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/assets/images/6b3242c97e10899c789e73fe948625a4.jpeg" alt="">
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 
