--- a/index.html
+++ b/index.html
@@ -106,10 +106,14 @@
                 <div class="swiper-slide">
                     <img src="/assets/images/5e75bb6f1500ab1f9cc87d8285afab89.jpeg" alt="">
                     <div class="slide-txt">
-                        설레는 봄 특가 기획전💐
-                        베스트셀러 121+ 밥솥 SALE🧡
-                        121℃로 더 맛있게, 2.1 기압으로 더 완벽하게!
-                        기획전 전용 할인쿠폰 + 구매 전원 잡곡 사은품 증정!🎁
+                        <div class="txt-tit">
+                            설레는 봄 특가 기획전💐<br>
+                            베스트셀러 121+ 밥솥 SALE🧡
+                        </div>
+                        <div class="txt-desc">
+                            121℃로 더 맛있게, 2.1 기압으로 더 완벽하게!<br>
+                            기획전 전용 할인쿠폰 + 구매 전원 잡곡 사은품 증정!🎁
+                        </div>
                     </div>
                 </div>
 
@@ -122,6 +126,9 @@
             </div>
             <div class="swiper-pagination"></div>
         </div>
+        <section class="pick inner">
+            <h2>MD's PICK</h2>
+        </section>
     </main>
     <footer></footer>
 </body>
